# ai_openvdb

./: CMakeLists.txt  README.md
cmake/: FindArnold.cmake
src/: CMakeLists.txt  plugin.cpp  utils.cpp  utils.hpp  volume.cpp  volume.hpp
